--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 streamlit==1.32.2
-opencv-python==4.9.0.80
+opencv-python-headless==4.9.0.80  # Use headless version
 numpy==1.26.4
 Pillow==10.2.0
 torch==2.2.1
